--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.82f44582d86d1ea9.js"
+    <script src="/script2.js"
         type="text/javascript"></script>
     <script src="/script.js"
         type="text/javascript"></script>
@@ -1271,4 +1271,5 @@
 </body>
 
 </html>
+
 
