--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="nav">
         <div data-animation="default" class="nav_container navigation w-nav" data-easing2="ease-in"
             data-easing="ease-out" data-collapse="all" data-w-id="866965d9-c1a8-89b2-0bc8-d39bd9a28eac" role="banner"
-            data-no-scroll="1" data-duration="400"><img
-                src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White.png"
-                loading="lazy" sizes="(max-width: 839px) 100vw, 839px"
-                srcset="https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White-p-500.png 500w, https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White.png 839w"
-                alt="" class="image-6 tf-logo tfimg" />
+            data-no-scroll="1" data-duration="400"><a href="#Head" class="w-inline-block"><img
+                    src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White.png"
+                    loading="lazy" sizes="(max-width: 839px) 100vw, 839px"
+                    srcset="https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White-p-500.png 500w, https://cdn.prod.website-files.com/6872c6928b459659a571e631/68821e838548c35633eaaa19_True%20Focus_White.png 839w"
+                    alt="" class="image-6 tf-logo tfimg" /></a>
             <nav role="navigation"
                 class="nav_menu-full-screen background_inverse text-color_inverse nav-dropdown w-nav-menu">
                 <div id="w-node-_2cfbde3f-92e9-521c-9300-ff3c0e6ffd5a-0e6ffd4d"
@@ -1271,3 +1271,4 @@
 </body>
 
 </html>
+
