--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
             </div>
         </div>
     </div>
-    <header data-copilot="true" has-overlay=""
+    <div data-w-id="ef53e78c-7af4-2f7e-b494-4e716fe46c7a" class="lottie-animation-2" data-animation-type="lottie"
+        data-src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/68958aaee88a8ddbe49ffd52_Baseketball.json"
+        data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
+        data-default-duration="1.0333333333333334" data-duration="0"></div>
+    <header id="Head" has-overlay="" data-copilot="true"
         class="section padding_none overflow_hidden text-color_on-overlay is-accent-primary section1">
         <div class="w-layout-grid grid_2-col">
             <div id="w-node-_6dd46323-fa9e-8cf5-0675-236b5eb266d9-5eb266d7"
@@ -1271,5 +1275,6 @@
 </body>
 
 </html>
+
 
 
