--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script type="text/javascript">WebFont.load({ google: { families: ["Inter:regular"] } });</script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="https://cdn.prod.website-files.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://cdn.prod.website-files.com/img/webclip.png" rel="apple-touch-icon" />
+    <link href="TF_Ball.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="TF_Ball.png" rel="apple-touch-icon" />
 </head>
 
 <body class="body">
@@ -1301,4 +1301,5 @@
 </body>
 
 </html>
+
 
