--- a/index.html
+++ b/index.html
@@ -1288,16 +1288,16 @@
             </div>
         </div>
     </footer>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6872c6928b459659a571e631"
+    <script src="script2.js"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.36b8fb49256177c8.js"
+    <script src="script3.js"
         type="text/javascript"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.82f44582d86d1ea9.js"
+    <script src="script4.js"
         type="text/javascript"></script>
     <script src="script.js"
         type="text/javascript"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.4c7623c6.0ec84d415cbfc0db.js"
+    <script src="script5.js"
         type="text/javascript"></script>
 </body>
 
