--- a/index.html
+++ b/index.html
@@ -1288,17 +1288,22 @@
             </div>
         </div>
     </footer>
-    <script src="script2.js"
+    <!-- jQuery first -->
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6872c6928b459659a571e631"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.36b8fb49256177c8.js"
+
+<!-- All Webflow exports (keep them in the same order Webflow gave you) -->
+<script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.82f44582d86d1ea9.js"
+<script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.schunk.82f44582d86d1ea9.js"
         type="text/javascript"></script>
-    <script src="script.js"
+<script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.4c7623c6.0ec84d415cbfc0db.js"
         type="text/javascript"></script>
-    <script src="https://cdn.prod.website-files.com/6872c6928b459659a571e631/js/webflow.4c7623c6.0ec84d415cbfc0db.js"
-        type="text/javascript"></script>
+
+<!-- Your custom scripts LAST -->
+<script src="script.js" type="text/javascript"></script>
+
 </body>
 
 </html>
